--- a/Xbox Achievement Unlocker.csproj
+++ b/Xbox Achievement Unlocker.csproj
@@ -5,6 +5,14 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>Xbox_Achievement_Unlocker</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Memory.dll.x64" Version="1.2.23" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
