add stats editor to feature request template

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -15,6 +15,7 @@ body:
       options:
         - Unlocker
         - Spoofer
+        - Stats Editor
         - New/Other
     validations:
       required: true
