initial games tab logic sort, filter and XUID override are still todo renamed dashboard to home

--- a/XAU/XAU.csproj
+++ b/XAU/XAU.csproj
@@ -26,10 +26,12 @@
 
   <ItemGroup>
     <None Remove="Assets\cirno.png" />
+    <None Remove="Assets\G.png"/>
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Assets\cirno.png" />
+    <Resource Include="Assets\G.png" />
   </ItemGroup>
 
 </Project>
