--- a/XAU/XAU.csproj
+++ b/XAU/XAU.csproj
@@ -10,6 +10,7 @@
     <UseWPF>true</UseWPF>
     <Version>2.1.0</Version>
     <Copyright>Made By Draff ;)</Copyright>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
