--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
   - type: input
     id: XAU-Ver
     attributes:
-      label: What version of the Xbox Achievement Unlocker were you using (you can see this in the settings page)?
+      label: What version of the Xbox Achievement Unlocker were you using (you can see this in the info page)?
       placeholder: 2.x
     validations:
       required: true
