--- a/XAU/XAU.csproj
+++ b/XAU/XAU.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="System.Management" Version="9.0.0-preview.3.24172.9" />
     <PackageReference Include="WPF-UI" Version="3.0.0-preview.4" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.*" />
   </ItemGroup>
 
   <ItemGroup>
