Add XboxAuthNet library for oauth login and token generation

--- a/XAU/XAU.csproj
+++ b/XAU/XAU.csproj
@@ -10,6 +10,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <Version>2.7.0</Version>
     <Copyright>Made By Draff ;)</Copyright>
     <Platforms>AnyCPU;x64</Platforms>
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2535.41" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.3.24172.9" />
@@ -36,6 +38,10 @@
   <ItemGroup>
     <Resource Include="Assets\cirno.png" />
     <Resource Include="Assets\G.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Util\XboxAuthNet\Platforms\" />
   </ItemGroup>
 
 </Project>
